# rift-morph-ai-

./: .gitignore  CONTRIBUTORS.md  README.md
.github/workflows/: dev.yml
editors/rift-emacs/: README.md
editors/rift-vim/: README.md
editors/rift-vscode/: .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  build.mjs  package-lock.json  package.json  reinstall.sh  rollup.config.js  tsconfig.json
editors/rift-vscode/media/: vscode.css
editors/rift-vscode/media/scripts/: chat.js  microlight.min.js  showdown.min.js  tailwind.min.js
editors/rift-vscode/src/: client.ts  extension.ts  types.ts
editors/rift-vscode/src/activation/: environmentSetup.ts
editors/rift-vscode/src/elements/: WebviewProvider.ts
editors/rift-vscode/src/lib/: PubSub.ts  Store.ts
editors/rift-vscode/src/util/: AtableFileFunction.ts
editors/rift-vscode/webviews/: globals.d.ts  tsconfig.json
editors/rift-vscode/webviews/components/: AcceptRejectBar.svelte  ChatWebview.svelte  FileChip.ts  LogsWebview.svelte  OmniBar.svelte  stores.ts
editors/rift-vscode/webviews/components/chat/: Chat.svelte  Response.svelte  UserInput.svelte
editors/rift-vscode/webviews/components/chat/dropdown/: AtDropdown.svelte  AtDropdownCard.svelte  SlashDropdown.svelte  SlashDropdownCard.svelte
editors/rift-vscode/webviews/components/icons/: AcceptRejectCheck.svelte  AcceptRejectClose.svelte  ArrowDownSvg.svelte  ArrowRightSvg.svelte  ChatSvg.svelte  CopySvg.svelte  EllipsisDarkSvg.svelte  EllipsisSvg.svelte  FileIconSvg.svelte  LogGreenSvg.svelte  LogRedSvg.svelte  LogYellowSvg.svelte  ResetSvg.svelte  RiftSvg.svelte  SendSvg.svelte  UserSvg.svelte  copySvg.js  oldUserSvg.svelte
editors/rift-vscode/webviews/components/logs/: Agent.svelte  Log.svelte  Logs.svelte
editors/rift-vscode/webviews/pages/: Chat.ts  Logs.ts
rift-engine/: .gitignore  README.md  pyproject.toml  styles.css
rift-engine/.github/workflows/: main.yaml
rift-engine/rift/: __about__.py  __main__.py
rift-engine/rift/agents/: README.md  __init__.py  abstract.py  agenttask.py  aider_agent.py  cli_agent.py  code_edit.py  curl_agent.py  engineer.py  gpt_eng.py  mentat_agent.py  registry.py  reverso.py  rift_chat.py  smol.py  test_agent.py  util.py
rift-engine/rift/agents/cli/: README.md  agent.py  aider_agent.py  gpt_eng.py  smol.py  util.py
rift-engine/rift/agents/client/: __init__.py  agent_client.py  cli_agent.py  gpt_eng.py  smol.py  util.py
rift-engine/rift/llm/: __init__.py  abstract.py  create.py  gpt4all_model.py  hf_client.py  openai_client.py  openai_types.py  prompt.py
rift-engine/rift/lsp/: __init__.py  document.py  server.py  types.py
rift-engine/rift/rpc/: __init__.py  extrarpc.py  io_transport.py  jsonrpc.py  transport.py
rift-engine/rift/server/: core.py  helper.py  languages.json  lsp.py  selection.py
rift-engine/rift/util/: TextStream.py  asyncgen.py  context.py  dispatch.py  file_diff.py  misc.py  ofdict.py  type_util.py
rift-engine/tests/diff/: file1.txt  file2.txt
